# Shade

./: .gitignore  .gitmodules  CMakeLists.txt  Dx12RenderEngine.cpp  Dx12RenderEngine.h  Mesh.cpp  Mesh.h  PipelineState.cpp  PipelineState.h  RenderEngine.cpp  RenderEngine.h  Scene.h  Shade.cpp  Shader.cpp  Shader.h  ShaderToyScene.cpp  ShaderToyScene.h  StaticMesh.cpp  StaticMesh.h  Util.cpp  Util.h  Widgets.h  readme.md  shaders.hlsl
cmake/: DirectXShaderCompiler.cmake  ImGui.cmake  MagicEnum.cmake
media/: colored_cube.ply  rotated_teapot.ply
src/: Camera.cpp  Camera.h  Common.cpp  Common.h  Dx12RenderEngine.cpp  Dx12RenderEngine.h  GeometryManager.cpp  GeometryManager.h  Mesh.cpp  Mesh.h  PipelineState.cpp  PipelineState.h  RenderEngine.cpp  RenderEngine.h  Scene.h  Shade.cpp  Shade.h  Shader.cpp  Shader.h  ShaderToyScene.cpp  ShaderToyScene.h  Util.cpp  Util.h  Util3D.cpp  Util3D.h  Viewport.cpp  Viewport.h  Widgets.cpp  Widgets.h  d3dx12.h  shaders.hlsl
src/nodes/: Node.cpp  Node.h  NodeEditor.cpp  NodeEditor.h  NodeLink.h  NodeNumeric.cpp
